--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
    "type": "module",
    "scripts": {
       "test": "echo \"Error: no test specified\" && exit 1",
-      "dev": "tsc && node /tmp/bokdb_dist/index.js"
+      "dev": "tsc && node dist/index.js"
    },
    "keywords": [],
    "author": "",
