--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,8 @@
    "license": "ISC",
    "description": "",
    "dependencies": {
+      "class-transformer": "^0.5.1",
+      "class-validator": "^0.14.2",
       "dotenv": "^16.5.0",
       "express": "^5.1.0",
       "mysql2": "^3.14.1",
