--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -7,6 +7,7 @@
       "projectType": "application",
       "schematics": {
          "@schematics/angular:component": {
+            "standalone": true,
             "skipTests": true,
             "inlineStyle": true
          }
