--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
    "dependencies": {
       "class-transformer": "^0.5.1",
       "class-validator": "^0.14.2",
+      "cors": "^2.8.5",
       "dotenv": "^16.5.0",
       "express": "^5.1.0",
       "mysql2": "^3.14.1",
@@ -22,6 +23,7 @@
    },
    "devDependencies": {
       "@eslint/js": "^9.29.0",
+      "@types/cors": "^2.8.19",
       "@types/express": "^5.0.3",
       "@types/node": "^24.0.3",
       "@typescript-eslint/eslint-plugin": "^8.34.1",
