--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,7 +32,8 @@
     "@angular/router": "^20.2.0",
     "@tailwindcss/postcss": "^4.1.12",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "typescript-eslint": "^8.46.0"
   },
   "devDependencies": {
     "@angular/build": "^20.2.1",
