--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -29,7 +29,8 @@
             ],
             "styles": [
               "src/custom-theme.scss",
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/@ngxpert/hot-toast/src/styles/styles.css"
             ]
           },
           "configurations": {
