--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "@angular/material": "^20.2.4",
     "@angular/platform-browser": "^20.2.0",
     "@angular/router": "^20.2.0",
+    "@ngxpert/hot-toast": "^5.1.2",
     "@tailwindcss/postcss": "^4.1.12",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
