--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -16,12 +16,14 @@ jobs:
           fetch-depth: 1
 
       - name: Install dependencies
-        run: npm ci
-        working-directory: backend
+        run: |
+         cd /var/www/bokportalen_backend
+         npm ci
 
       - name: Build project
-        run: npm run build
-        working-directory: backend
+        run: |
+         cd /var/www/bokportalen_backend
+         npm run build
 
       - name: Move project to target directory
         run: |
