--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -15,21 +15,20 @@ jobs:
         with:
           fetch-depth: 1
 
+      - name: Install dependencies
+        run: npm ci
+        working-directory: backend
+
+      - name: Build project
+        run: npm run build
+        working-directory: backend
+
       - name: Move project to target directory
         run: |
          TARGET_DIR="/var/www/bokportalen_backend/"
          rm -rf ${TARGET_DIR:?}/*
          cp -r ./backend/dist/* "$TARGET_DIR"
       
-      - name: Install dependencies
-        run: |
-          cd /var/www/bokportalen_backend
-          npm ci
-  
-      - name: Build project
-        run: |
-          cd /var/www/bokportalen_backend
-          npm run build
 
       - name: Restart service
         run: |
