--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -15,10 +15,6 @@ jobs:
         with:
           fetch-depth: 1
 
-      - name: Install dependencies
-        run: npm ci
-        working-directory: backend
-
       - name: Build project
         run: npm run build
         working-directory: backend
@@ -29,6 +25,8 @@ jobs:
          rm -rf ${TARGET_DIR:?}/*
          cp -r ./backend/dist/* "$TARGET_DIR"
          cp ./backend/package.json "$TARGET_DIR"
+         cd "$TARGET_DIR"
+         npm ci --production
 
       - name: Restart service
         run: |
