--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -15,6 +15,10 @@ jobs:
         with:
           fetch-depth: 1
 
+      - name: Install dependencies
+        run: npm ci
+        working-directory: backend
+
       - name: Build project
         run: npm run build
         working-directory: backend
