--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,12 +26,14 @@
     "@angular/common": "^20.2.0",
     "@angular/compiler": "^20.2.0",
     "@angular/core": "^20.2.0",
+    "@angular/fire": "^20.0.1",
     "@angular/forms": "^20.2.0",
     "@angular/material": "^20.2.4",
     "@angular/platform-browser": "^20.2.0",
     "@angular/router": "^20.2.0",
     "@ngxpert/hot-toast": "^5.1.2",
     "@tailwindcss/postcss": "^4.1.12",
+    "firebase": "^12.8.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "typescript-eslint": "^8.46.0"
