--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
       "cors": "^2.8.5",
       "dotenv": "^16.5.0",
       "express": "^5.1.0",
+      "firebase-admin": "^13.6.1",
       "mysql2": "^3.14.1",
       "reflect-metadata": "^0.2.2",
       "typeorm": "^0.3.25"
